# minecraft_rust

./: Cargo.toml  README.md  Spinnigbox.rs  cubemap.rs  test2.txt
legacy/: MouseKeyboard.rs  boxWithTExture.rs
resources/: TextureTemplateMaster.xcf
src/: camera.rs  main.rs  player.rs  render_gl.rs  skybox.rs  triangle.frag  world.rs
src/shaders/: block.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert
src/world/: block_model.rs  chunk.rs
src/world/chunk/: block.rs
