[package]
name = "minecraft_rust"
version = "0.1.0"
authors = ["Rokas Barasa <50622827+Rokasbarasa1@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
gl = "0.10.0"
stb_image = "0.2.2"
image = "0.23.14"
serde_json = "1.0.64"
error-chain = "0.12.4"
glm = "0.2.3"
nalgebra-glm = "0.11.0"