[package]
name = "minecraft_rust"
version = "0.1.0"
authors = ["Rokas Barasa <50622827+Rokasbarasa1@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
# glium
gl = "0.10.0"
image = "0.23.14"
glm = "0.2.3"
stopwatch = "0.0.7"
noise = "0.7.0"
# firestorm = { version="0.4", features=["enable_system_time"] }
flamegraph = "0.4.0"

[profile.release]
debug = true