[package]
name = "minecraft_rust"
version = "0.1.0"
authors = ["Rokas Barasa <50622827+Rokasbarasa1@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
gl = "0.10.0"
image = "0.23.14"
glm = "0.2.3"
stopwatch = "0.0.7"
noise = "0.7.0"
# flamegraph = "0.4.0"
rand = "0.8.4"
parking_lot = "0.11.2"
rayon = "1.5.1"
rand_xoshiro = "0.6.0"
winit = "0.25.0"